# hmo-lab

./: README.md  best-2022_instance1.txt  best-2022_instance2.txt  best-2022_instance3.txt  best-greedy-10000-2022_instance1.txt  best-greedy-10000-2022_instance2.txt  best-greedy-10000-2022_instance3.txt  pyproject.toml  validator.py
1/: 2022_instance1.csv  2022_instance2.csv  2022_instance3.csv  main.py  validator.py
old/: best-greedy-100000-2022_instance1.txt  best-greedy-100000-2022_instance2.txt  best-solution-2022_instance1.txt  best-solution-2022_instance2.txt  best-solution-2022_instance3.txt
